@@ -1,5 +1,5 @@
 class Doctor < ActiveRecord::Base
-  attr_accessible :name, :doctor_type, :status
+  attr_accessible :name, :doctor_type, :status, :user_id
 
   DOCTOR_TYPE = ["cardiologist", "endocrinologist", "somnologist"].collect{|i| [i,i]}
 
