@@ -8,6 +8,9 @@
     * Default application name is now added to the from: field for emails
     * Email subjects no longer include the application name
 
+* Refactoring
+  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
+
 * Bug Fix
   * Sticky requests from Task Tracker now correctly include stickies for Phone Calls and Visits that are unnassigned
 
